# adventofcode

./: .gitignore  Kyuafile  README  build.ninja  ninjafile
01/: first.c  second.c
02/: babbyturing.c  first.c  second.c
03/: combined.c  hash_table.c  wires.c  wires.h
04/: dubs.c  evenbiggerboy  replacementdubs
05/: turing.c
06/: bigboyans  hash_table.c  hash_table.h  meme.py  orbits.c  sage_sol.py
07/: fbackloop.c  seven.c
08/: faggot_31_5  layers.c  nigger_26_5
12/: meme.py
14/: meme.py
16/: meme.py
2019/: README  build.ninja
2019/01/: first  first.c
2019/03/: hash_table.c  hash_table.h  wires
2019/04/: dubs
2019/05/: turing.c
2019/06/: hash_table.c  hash_table.h  orbits
2019/07/: seven
2019/08/: layers
2019/09/: fuckyou.c
2019/10/: meme.py
2019/11/: fuckyou  fuckyou.c
2019/14/: 100kbigboy
2019/lib/: fifo.h  intcode.c  intcode.h
2020/: 01.hs  02.hs  03.hs  04.hs  05.hs  06.hs  07.hs  09.hs  10.hs  12.hs  13.hs  14.hs  17.hs  18.hs  19.hs  aoc.cabal  readme.md
2020/inputs/18/: test
test/: Kyuafile  test_01.sh  test_02.sh  test_03.sh  test_04.sh  test_05.sh  test_06.sh  test_07.sh  test_08.sh  test_09.sh  test_10.sh  test_12.sh
